<resources>
    <string name="app_name">HabTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">ccid@ualberta.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_myday">My Day</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_events">Events</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_account">Account</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_following">Following</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_explore">Explore</string>
    <string name="plan_str">M T W T F S S</string>

    <string name="dash">-</string>
    <string name="date_formatter">%1$s-%2$s-%3$s</string>
    <string name="date_prompt">"Date to start: "</string>
    <string name="year_format">yyyy</string>
    <string name="month_format">MM</string>
    <string name="day_format">dd</string>
    <string name="date_display">"Date started: %1$s</string>
    <string name="error_message">Invalid %1$s entry: please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="lat_lng">(lat, lng)</string>

    <string name="MAPS_API_KEY">AIzaSyAWUSEdRFDc5NzNjhQHs2WWctDm_Lo03JI</string>

</resources>