<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_outline_person_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/ic_outline_face_24"
            android:title="@string/menu_following" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_outline_notifications_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_outline_explore_24"
            android:title="@string/menu_explore"/>
    </group>
</menu>