<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context="ui.events.EventsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Search For Event" />

        <ListView
            android:id="@+id/eventList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" />

        <LinearLayout
            android:id="@+id/field_searchEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/habit_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="20"
                android:maxLength="20"
                android:hint="Habit title"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/year_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:maxEms="4"
                    android:maxLength="4"
                    android:hint="@string/year_format"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/dash1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash" />
                <EditText
                    android:id="@+id/month_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:hint="@string/month_format"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/dash2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash" />
                <EditText
                    android:id="@+id/day_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:hint="@string/day_format"
                    android:inputType="number" />
                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="CONFIRM" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>